--- a/src/app/pages/purchase/supplierwise-purchase-and-cr-in-tons/supplierwise-purchase-and-cr-in-tons.component.html
+++ b/src/app/pages/purchase/supplierwise-purchase-and-cr-in-tons/supplierwise-purchase-and-cr-in-tons.component.html
@@ -58,7 +58,7 @@
       <div class="table-fixed">
         <div class="card">
           <div class="card-block">
-            <table class="table table-striped table-bordered table-hover compact">
+            <table class="table table-striped table-bordered table-hover compact marginTable">
               <thead style="position: sticky; top: 0; text-align: center;">
                 <tr>
                   <th style="width: 20%;">Supplier Name</th>
@@ -152,7 +152,7 @@
       <div class="table-fixed">
         <div class="card">
           <div class="card-block">
-            <table class="table table-striped table-bordered table-hover compact">
+            <table class="table table-striped table-bordered table-hover compact marginTable">
               <thead style="position: sticky; top: 0; text-align: center;">
                 <tr>
                   <th style="width: 20%;">Supplier Name</th>
