--- a/src/app/pages/sales/customer-ci-grade-per-kg-rate-realization/customer-ci-grade-per-kg-rate-realization.component.html
+++ b/src/app/pages/sales/customer-ci-grade-per-kg-rate-realization/customer-ci-grade-per-kg-rate-realization.component.html
@@ -95,7 +95,7 @@
       <div class="table-fixed">
         <div class="card">
           <div class="card-block">
-            <table class="table table-striped table-bordered table-hover compact">
+            <table class="table table-striped table-bordered table-hover compact marginTable">
               <thead style="position: sticky; top: 0; text-align: center;">
                 <tr>
                   <th class="td_left" style="width: 20%;">Customer Name</th>
