--- a/src/app/pages/sales/customer-wise-plan-vs.-actual-sale/customer-wise-plan-vs.-actual-sale.component.html
+++ b/src/app/pages/sales/customer-wise-plan-vs.-actual-sale/customer-wise-plan-vs.-actual-sale.component.html
@@ -73,14 +73,13 @@
             <div class="table-fixed">
                 <div class="card">
                     <div class="card-block">
-                        <table class="table table-striped table-bordered table-hover compact">
+                        <table class="table table-striped table-bordered table-hover compact marginTable">
                             <thead style="position: sticky; top: 0; text-align: center;">
                                 <tr>
                                     <th class="td_left" style="width: 20%;">Customer Name</th>
                                     <th class="td_right">VA %</th>
                                     <th class="td_right">Planned Sale</th>
                                     <th class="td_right">Actual Sale</th>
-                                    <!-- <th class="td_right">1st 50% Debit note/Invoice No.</th> -->
                                     <th class="td_right">Difference</th>
                                     <th class="td_right">VA Effect</th>
                                 </tr>
