--- a/src/app/pages/sales/monthly-sales-and-target/monthly-sales-and-target.component.html
+++ b/src/app/pages/sales/monthly-sales-and-target/monthly-sales-and-target.component.html
@@ -55,7 +55,7 @@
       <div class="table-fixed">
         <div class="card">
           <div class="card-block">
-            <table class="table table-striped table-bordered table-hover compact">
+            <table class="table table-striped table-bordered table-hover compact marginTable">
               <thead style="position: sticky; top: 0; text-align: center;width: max-content;">
                 <tr *ngIf="Headers.length !=0">
                   <th class="td_left" style="width: max-content;">Month</th>
@@ -65,9 +65,10 @@
               </thead>
               <tbody *ngIf="Tabledata.length !=0">
                 <tr *ngFor="let data of Tabledata;">
-                  <!-- <td class="td_left">{{data[0]}}</td> -->
 
-                  <td *ngFor="let datarec of data" style="text-align: right;">{{datarec != null ? datarec : 0}}</td>
+                  <td class="td_left">{{data[0]}}</td>
+
+                  <td *ngFor="let datarec of data.slice(1)" style="text-align: right;">{{datarec != null ? datarec : 0}}</td>
                 </tr>
               </tbody>
             </table>
