--- a/src/app/pages/sales/monthly-value-addition-target-vs-actual/monthly-value-addition-target-vs-actual.component.html
+++ b/src/app/pages/sales/monthly-value-addition-target-vs-actual/monthly-value-addition-target-vs-actual.component.html
@@ -54,7 +54,7 @@
       <div class="table-fixed">
         <div class="card">
           <div class="card-block">
-            <table class="table table-striped table-bordered table-hover compact">
+            <table class="table table-striped table-bordered table-hover compact marginTable">
               <thead style="position: sticky; top: 0; text-align: center;">
                 <tr *ngIf="Headers.length !=0">
                   <th class="td_left">Month</th>
