--- a/src/app/pages/sales/payment-collection-plan/payment-collection-plan.component.html
+++ b/src/app/pages/sales/payment-collection-plan/payment-collection-plan.component.html
@@ -39,6 +39,23 @@
           </div>
         </div>
         <div class="col-sm-2">
+          <label>Select Month <sub class="required">* </sub></label>
+        </div>
+        <div class="col-sm-2">
+          <div class="form-group form-primary form-static-label">
+            <span class="border-lable-flt">
+              <ng-select id="MONTH_NAME" bindValue="DateValue" bindLabel="DateDesc" required #MONTH_NAME
+                [(ngModel)]=" selectedMonth" formControlName="MONTH_NAME" (focus)="onFocus(MONTH_NAME)"
+                [selectOnTab]='true' (change)="getMonth()">
+                <ng-option *ngFor="let values of month" [value]="values">
+                  {{values.DateDesc}}</ng-option>
+              </ng-select>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="row" style="margin: 1%;">
+        <div class="col-sm-2">
           <label>Customer Type <sub class="required"> * </sub></label>
         </div>
         <div class="col-sm-3">
@@ -53,9 +70,7 @@
             <label class="form-check-label" for="inlineRadio2">Export</label>
           </div>
         </div>
-      </div>
-      <div class="form-group row justify-content-md-center" style="margin: 1%;">
-        <div class="col-sm text-center">
+        <div class="col-sm">
           <button class="btn btn-primary sm" [disabled]="isLoading" (click)="loadData()">Go <i class="fa"
               [ngClass]="{'fa-spin fa-spinner': isLoading}"></i></button>
         </div>
@@ -69,7 +84,23 @@
       <div class="table-fixed">
         <div class="card">
           <div class="card-block">
-            <table class="table table-striped table-bordered table-hover compact">
+            <table class="table table-striped table-bordered table-hover compact marginTable">
+              <thead style="position: sticky; top: 0; text-align: center;">
+                <tr>
+                  <th class="td_right"></th>
+                  <th class="td_left"></th>
+                  <th class="td_right"></th>
+                  <th class="td_right"></th>
+                  <th class="td_right"></th>
+                  <th class="td_right"></th>
+                  <th class="td_right">{{currentMonth | date :'MMM yyyy'}}</th>
+                  <th class="td_right">{{priviousOne | date :'MMM yyyy'}}</th>
+                  <th class="td_right">{{priviousTwo | date :'MMM yyyy'}}</th>
+                  <th class="td_right">{{priviousThree | date :'MMM yyyy'}}</th>
+                  <th class="td_right">{{priviousFour | date :'MMM yyyy'}}</th>
+                  <th class="td_right">{{priviousFive | date :'MMM yyyy'}}</th>
+                </tr>
+              </thead>
               <thead style="position: sticky; top: 0; text-align: center;">
                 <tr>
                   <th class="td_right">Sr. No.</th>
@@ -110,10 +141,10 @@
               <tfoot style="position: sticky; bottom: 0; text-align: center;">
                 <tr *ngFor="let data of FooterData;let indexOfelement = index">
                   <td class="td_right"> </td>
-                  <td style="font-weight: bold;">{{data.SUBGL_LONGNAME}} </td>
-                  <td class="td_right"> {{data.INVOICE_AMT != null ? data.INVOICE_AMT : '-'}}</td>
-                  <td class="td_right">{{data.RECEIPT_AMT != null ? data.RECEIPT_AMT : '-'}}</td>
-                  <td class="td_right">{{data.RECV_PERCENT != null ? data.RECV_PERCENT + '%' : data.RECV_PERCENT}} </td>
+                  <td class="td_left" style="font-weight: bold;">{{data.SUBGL_LONGNAME}} </td>
+                  <td class="td_right"> {{data.INVOICE_AMT != null ? data.INVOICE_AMT : ''}}</td>
+                  <td class="td_right">{{data.RECEIPT_AMT != null ? data.RECEIPT_AMT : ''}}</td>
+                  <td class="td_right">{{data.RECV_PERCENT != null ? data.RECV_PERCENT : ''}} </td>
                   <td class="td_right">{{data.CREDIT_DAYS != 0 ? data.CREDIT_DAYS : ''}}</td>
                   <td class="td_right">{{data.CR_DAYS != 0 ? data.CR_DAYS : ''}}</td>
                   <td class="td_right">{{data.CR_DAYS1 != 0 ? data.CR_DAYS1 : ''}}</td>
