--- a/src/app/pages/sales/schedule-adherence-for-the-month/schedule-adherence-for-the-month.component.html
+++ b/src/app/pages/sales/schedule-adherence-for-the-month/schedule-adherence-for-the-month.component.html
@@ -77,7 +77,7 @@
             <div class="table-fixed">
                 <div class="card">
                     <div class="card-block">
-                        <table class="table table-striped table-bordered table-hover compact">
+                        <table class="table table-striped table-bordered table-hover compact marginTable">
                             <thead style="position: sticky; top: 0; text-align: center;">
                                 <tr>
                                     <th scope="col" class="td_right">Sr. No.</th>
