--- a/src/app/pages/subcontract/supplier-wise-boring-recovery-details/supplier-wise-boring-recovery-details.component.html
+++ b/src/app/pages/subcontract/supplier-wise-boring-recovery-details/supplier-wise-boring-recovery-details.component.html
@@ -65,7 +65,7 @@
       <div class="table-fixed">
         <div class="card">
           <div class="card-block">
-            <table class="table table-striped table-bordered table-hover compact">
+            <table class="table table-striped table-bordered table-hover compact marginTable">
               <thead style="position: sticky; top: 0; text-align: center;">
                 <tr>
                   <th class="td_right">SN</th>
