--- a/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.html
+++ b/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.html
@@ -73,19 +73,24 @@
             <div class="table-fixed">
                 <div class="card">
                     <div class="card-block">
-                        <table class="table table-striped table-bordered table-hover compact">
+                        <table class="table table-striped table-bordered table-hover compact marginTable" style="width: 100%;">
                             <thead style="position: sticky; top: 0; text-align: center;">
 
                                 <tr *ngIf="Headers.length !=0">
-                                    <th *ngFor="let data of Headers" style="text-align: right;">
+                                    <th class="td_left" >Month</th>
+                                    <th *ngFor="let data of Headers"
+                                        style="text-align: right;">
                                         {{data.MAT_NAME}}
                                     </th>
                                 </tr>
-                                
+
                             </thead>
                             <tbody *ngIf="Tabledata.length !=0">
                                 <tr *ngFor="let data of Tabledata;">
-                                    <td *ngFor="let datarec of data" style="text-align: right;">{{datarec}}</td>
+                                    <td class="td_left">{{data[0]}}</td>
+
+                                    <td *ngFor="let datarec of data.slice(1)" style="text-align: right;">{{datarec !=
+                                        null ? datarec : 0}}</td>
                                 </tr>
                             </tbody>
                         </table>
