tfoot total row remains constant

--- a/src/app/pages/sales/development-cost-details/development-cost-details.component.html
+++ b/src/app/pages/sales/development-cost-details/development-cost-details.component.html
@@ -109,6 +109,13 @@
                   <td>No Data</td>
                 </tr>
               </tbody>
+
+              <div class="row" id="r1" style="margin-top: 20px;margin-bottom: 20px;" *ngIf="showtable"></div>
+                 <div class="col-12"></div>
+                  <div class="table-responsive"></div>
+                    <div class="table-fixed"></div>
+                      <div class="card"></div>
+                        <div class="card-block"></div> 
               <tfoot style="position: sticky; bottom: 0; text-align: center;">
                 <tr>
                   <th class="td_left">Total</th>
