--- a/src/app/pages/purchase/top5-suppliers-cr-percent/top5-suppliers-cr-percent.component.html
+++ b/src/app/pages/purchase/top5-suppliers-cr-percent/top5-suppliers-cr-percent.component.html
@@ -125,8 +125,17 @@
                   <td class="td_left">{{data.REJ_DETAILS}}</td>
                 </tr>
               <tbody *ngIf="Tabledata.length ==0">
-                <td>No Data</td>
+                <tr>
+                  <td>No Data</td>
+                </tr>
               </tbody>
+
+              <div class="row" id="r1" style="margin-top: 20px;margin-bottom: 20px;" *ngIf="showtable"></div>
+                 <div class="col-12"></div>
+                  <div class="table-responsive"></div>
+                    <div class="table-fixed"></div>
+                      <div class="card"></div>
+                        <div class="card-block"></div> 
               <tfoot style="position: sticky; bottom: 0; text-align: center;">
                 <tr>
                   <th> Total</th>
