--- a/src/app/pages/sales/development-cost-details/development-cost-details.component.html
+++ b/src/app/pages/sales/development-cost-details/development-cost-details.component.html
@@ -82,7 +82,7 @@
             <table class="table table-striped table-bordered table-hover compact marginTable">
               <thead style="position: sticky; top: 0; text-align: center;">
                 <tr>
-                  <th class="td_left" style="width: 20%;">Customer Name</th>
+                  <th class="td_left">Customer Name</th>
                   <th class="td_left">Part Name</th>
                   <th class="td_Right">Development P.O.No/Referance</th>
                   <th class="td_right">Approved Development Cost In INR</th>
