--- a/src/app/pages/purchase/purchase-tonnage/purchase-tonnage.component.html
+++ b/src/app/pages/purchase/purchase-tonnage/purchase-tonnage.component.html
@@ -97,6 +97,9 @@
                         <div class="card-block">
                             <table class="table table-striped table-bordered table-hover compact">
                                 <thead style="position: sticky; top: 0; text-align: center;">
+
+                                   
+                                    
                                     <tr>
                                         <th class="td_right"></th>
                                         <th class="td_left">Supplier Name</th>
@@ -128,6 +131,15 @@
                         <div class="card-block">
                             <table class="table table-striped table-bordered table-hover compact marginTable">
                                 <thead style="position: sticky; top: 0; text-align: center;">
+
+                                    <tr>                               
+                                    </tr>                              
+                                    <th colspan="12">
+                                        <div class="search-container">
+                                            <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search...">
+                                        </div>
+                                    </th>
+
                                     <tr>
                                         <th class="td_left">Supplier Name</th>
                                         <th class="td_right"> Purchase Qty</th>
