--- a/src/app/pages/purchase/top5-suppliers-cr-percent/top5-suppliers-cr-percent.component.html
+++ b/src/app/pages/purchase/top5-suppliers-cr-percent/top5-suppliers-cr-percent.component.html
@@ -102,6 +102,14 @@
           <div class="card-block">
             <table class="table table-striped table-bordered table-hover compact marginTable">
               <thead style="position: sticky; top: 0; text-align: center;">
+
+                <tr>                               
+                </tr>                              
+                <th colspan="10">
+                    <div class="search-container">
+                        <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search...">
+                    </div>
+                </th>
                 <tr>
                   <th class="td_right">Sr. No.</th>
                   <th class="td_left" style="width: 30%;">Supplier Name</th>
