--- a/src/app/pages/quality-control/customer-wise-complaints-received/customer-wise-complaints-received.component.html
+++ b/src/app/pages/quality-control/customer-wise-complaints-received/customer-wise-complaints-received.component.html
@@ -79,6 +79,14 @@
                     <div class="card-block">
                         <table class="table table-striped table-bordered table-hover compact marginTable">
                             <thead style="position: sticky; top: 0; text-align: center;">
+
+                                <tr>                               
+                                </tr>                              
+                                <th colspan="6">
+                                    <div class="search-container">
+                                        <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search...">
+                                    </div>
+                                </th>
                                 <tr>
                                     <th scope="col" class="td_left">Customer Name</th>
                                     <th scope="col" class="td_right" *ngFor="let data of Headers">{{data.VALUE}}</th>
