--- a/src/app/pages/sales/customer-ci-grade-per-kg-rate-realization/customer-ci-grade-per-kg-rate-realization.component.html
+++ b/src/app/pages/sales/customer-ci-grade-per-kg-rate-realization/customer-ci-grade-per-kg-rate-realization.component.html
@@ -97,6 +97,14 @@
           <div class="card-block">
             <table class="table table-striped table-bordered table-hover compact marginTable">
               <thead style="position: sticky; top: 0; text-align: center;">
+
+                <tr>                               
+                </tr>                              
+                <th colspan="6">
+                    <div class="search-container">
+                        <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search...">
+                    </div>
+                </th>
                 <tr>
                   <th class="td_left" style="width: 20%;">Customer Name</th>
                   <th class="td_right">Quarter 01</th>
