--- a/src/app/pages/sales/enquiry-register/enquiry-register.component.html
+++ b/src/app/pages/sales/enquiry-register/enquiry-register.component.html
@@ -78,6 +78,14 @@
             <div class="card-block">
               <table class="table table-striped table-bordered table-hover compact marginTable">
                 <thead style="position: sticky; top: 0; text-align: center;">
+
+                  <tr>                               
+                  </tr>                              
+                  <th colspan="10">
+                      <div class="search-container">
+                          <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search...">
+                      </div>
+                  </th>
                   <tr>
                     <th class="td_left">Sr.No.</th>
                     <th class="td_right">Enquiry Number</th>
