--- a/src/app/pages/sales/monthly-sales-and-target/monthly-sales-and-target.component.html
+++ b/src/app/pages/sales/monthly-sales-and-target/monthly-sales-and-target.component.html
@@ -57,6 +57,14 @@
           <div class="card-block">
             <table class="table table-striped table-bordered table-hover compact marginTable">
               <thead style="position: sticky; top: 0; text-align: center;width: max-content;">
+
+                <tr>                               
+                </tr>                              
+                <th colspan="17">
+                    <div class="search-container">
+                        <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search...">
+                    </div>
+                </th>
                 <tr *ngIf="Headers.length !=0">
                   <th class="td_left" style="width: max-content;">Month</th>
                   <th scope="col"style="width: max-content;" *ngFor="let data of Headers" style="text-align: right;">{{data.VALUE}}
