--- a/src/app/pages/sales/monthly-value-addition-target-vs-actual/monthly-value-addition-target-vs-actual.component.html
+++ b/src/app/pages/sales/monthly-value-addition-target-vs-actual/monthly-value-addition-target-vs-actual.component.html
@@ -56,6 +56,16 @@
           <div class="card-block">
             <table class="table table-striped table-bordered table-hover compact marginTable">
               <thead style="position: sticky; top: 0; text-align: center;">
+
+                <tr>                               
+                </tr>                              
+                <th colspan="17">
+                    <div class="search-container">
+                        <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search...">
+                    </div>
+                </th>
+
+
                 <tr *ngIf="Headers.length !=0">
                   <th class="td_left">Month</th>
                   <th scope="col" *ngFor="let data of Headers" style="text-align: right;">{{data.VALUE}}
