--- a/src/app/pages/sales/schedule-adherence-for-the-month/schedule-adherence-for-the-month.component.html
+++ b/src/app/pages/sales/schedule-adherence-for-the-month/schedule-adherence-for-the-month.component.html
@@ -79,6 +79,13 @@
                     <div class="card-block">
                         <table class="table table-striped table-bordered table-hover compact marginTable">
                             <thead style="position: sticky; top: 0; text-align: center;">
+                                <tr>                               
+                                </tr>                              
+                                <th colspan="6">
+                                    <div class="search-container">
+                                        <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search...">
+                                    </div>
+                                </th>
                                 <tr>
                                     <th scope="col" class="td_right">Sr. No.</th>
                                     <th scope="col" class="td_left">Customer</th>
