--- a/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.html
+++ b/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.html
@@ -55,27 +55,36 @@
                 <div class="col-sm">
                     <button class="btn btn-primary sm" [disabled]="isLoading" (click)="loadData()">Go <i class="fa"
                             [ngClass]="{'fa-spin fa-spinner': isLoading}"></i></button>
-                            
+
                 </div>
-                
+
             </div>
-            
+
         </div>
     </form>
 </div>
 
-<!-- <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search..."> -->
-
 <!-- *ngIf="showtable" -->
 <div class="row" id="r1" style="margin-top: 20px;margin-bottom: 20px;" *ngIf="showtable">
+
+
     <div class="col-12">
         <div class="table-responsive">
             <div class="table-fixed">
                 <div class="card">
-                    <div class="card-block">
-                        <table class="table table-striped table-bordered table-hover compact marginTable" style="width: 100%;">
-                            <thead style="position: sticky; top: 0; text-align: center;">
 
+                    <div class="card-block">
+
+                        <table class="table table-striped table-bordered table-hover compact margintable">
+
+                            <thead style="position: sticky; top: 0; text-align: center;">
+                                <tr>                               
+                                </tr>                              
+                                <th colspan="6">
+                                    <div class="search-container">
+                                        <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search...">
+                                    </div>
+                                </th>
                                 <tr *ngIf="Headers.length !=0">
                                     <th class="td_left" >Month</th>
                                     <th *ngFor="let data of Headers"
