--- a/src/app/pages/purchase/top5-suppliers-cr-percent/top5-suppliers-cr-percent.component.html
+++ b/src/app/pages/purchase/top5-suppliers-cr-percent/top5-suppliers-cr-percent.component.html
@@ -33,7 +33,7 @@
             <span class="border-lable-flt">
               <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate"  class="form-control"
                 (focus)="onFocus(FROM)" [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [(ngModel)]="fromdate"
-                [maxDate]="maxDate" formControlName="FROM" required bsDatepicker style="max-width: 100px;">
+                [maxDate]="maxDate" formControlName="FROM" required bsDatepicker style="max-width: 100px;" #fdateInput>
             </span>
           </div>
           <div class="form-group form-primary form-static-label"
