--- a/src/app/pages/sales/development-cost-details/development-cost-details.component.html
+++ b/src/app/pages/sales/development-cost-details/development-cost-details.component.html
@@ -33,9 +33,9 @@
         <div class="col-sm-2">
           <div class="form-group input-group">
             <span class="border-lable-flt">
-              <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" class="form-control"
-                (focus)="onFocus(FROM)" [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [(ngModel)]="fromdate"
-                [maxDate]="maxDate" bsDatepicker formControlName="FROM" required style="max-width: 100px;">
+              <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" class="form-control" 
+                [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [(ngModel)]="fromdate"
+                [maxDate]="maxDate" bsDatepicker formControlName="FROM" required style="max-width: 100px;"    #fdateInput>
             </span>
           </div>
           <div class="form-group form-primary form-static-label"
@@ -49,7 +49,7 @@
         <div class="col-sm-2">
           <div class="form-group input-group">
             <span class="border-lable-flt">
-              <input type="text" placeholder="dd/mm/yyyy" name="tdate" id="tdate" class="form-control"
+              <input type="text" placeholder="dd/mm/yyyy" name="tdate" id="tdate" class="form-control" 
                 [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [minDate]="fromdate" [(ngModel)]="todate" bsDatepicker
                 formControlName="TO" required style="max-width: 100px;">
             </span>
