--- a/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.html
+++ b/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.html
@@ -21,7 +21,7 @@
                         <span class="border-lable-flt">
                             <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" #BRANCH_NAME
                                 [(ngModel)]="selectedBrach" formControlName="BRANCH_NAME" (focus)="onFocus(BRANCH_NAME)"
-                                [selectOnTab]='true' [required]="BRANCH">
+                                [selectOnTab]='true' [required]="BRANCH" >
                                 <ng-option *ngFor="let values of branch" [value]="values">
                                     {{values.NAME}}</ng-option>
                             </ng-select>
@@ -37,7 +37,7 @@
                 <div class="col-sm-2">
                     <div class="form-group form-primary form-static-label">
                         <span class="border-lable-flt">
-                            <ng-select id="YEAR_NAME" bindValue="DATEVALUE" bindLabel="DATEDESC" required #YEAR_NAME
+                            <ng-select id="YEAR_NAME" bindValue="DATEVALUE" bindLabel="DATEDESC" required #YEAR_NAME autofocus
                                 [(ngModel)]="selectedYear" formControlName="YEAR_NAME" (focus)="onFocus(YEAR_NAME)"
                                 [selectOnTab]='true'>
                                 <ng-option *ngFor="let values of finyear" [value]="values">
@@ -66,8 +66,6 @@
 
 <!-- *ngIf="showtable" -->
 <div class="row" id="r1" style="margin-top: 20px;margin-bottom: 20px;" *ngIf="showtable">
-
-
     <div class="col-12">
         <div class="table-responsive">
             <div class="table-fixed">
@@ -109,3 +107,4 @@
         </div>
     </div>
 </div>
+
