--- a/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.scss
+++ b/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.scss
@@ -1,22 +1,16 @@
 
+.filter-input-box {
+    position: relative;
+    display: inline-block;
+}
 
+.filter-input {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+}
 
-// .search-container {
-//   display: flex;
-//   //justify-content: flex-end; /* Move the content to the right */
-//   align-items: center;
-//   background-color:#f2f2f2;
-  
-// }
-
-// .search-container input {
-//   color: black;
-//   padding: 1px 3px 1px 3px;
-//   background: white repeat-x 0 0;
-//   border-width: 1px;
-//   border-style: solid;
-//   border-color: #b5b8c8;
-//   width: 300px;
-// }
-
-
+.filter-input-box:hover .filter-input {
+    display: block;
+}
