--- a/src/app/pages/purchase/supplierwise-purchase-and-cr-in-tons/supplierwise-purchase-and-cr-in-tons.component.html
+++ b/src/app/pages/purchase/supplierwise-purchase-and-cr-in-tons/supplierwise-purchase-and-cr-in-tons.component.html
@@ -69,29 +69,21 @@
                     </div>
                 </th>
                 <tr>
-                  <th style="width: 20%;">Supplier Name</th>
-                  <th style="text-align: right;">Avg. Purchase</th>
-                  <th style="text-align: right;">Avg. Purchase Returns</th>
-                  <th style="text-align: right;">Avg. Purchase Schedule</th>
-                  <th style="text-align: right;">Delivery Rating</th>
-                  <th style="text-align: right;">Delivery Rating </th>
-                  <th style="text-align: right;">Quality Rating</th>
-                  <th style="text-align: right;">Q1 Purchase</th>
-                  <th style="text-align: right;">Q1 purchase Return</th>
-                  <th style="text-align: right;">Q1 Delivery Rating</th>
-                  <th style="text-align: right;">Q1 Quality Rating</th>
-                  <th style="text-align: right;">Q2 Purchase</th>
-                  <th style="text-align: right;">Q2 purchase Return</th>
-                  <th style="text-align: right;">Q2 Delivery Rating</th>
-                  <th style="text-align: right;">Q2 Quality Rating</th>
-                  <th style="text-align: right;">Q3 Purchase</th>
-                  <th style="text-align: right;">Q3 purchase Return</th>
-                  <th style="text-align: right;">Q3 Delivery Rating</th>
-                  <th style="text-align: right;">Q3 Quality Rating</th>
-                  <th style="text-align: right;">Q4 Purchase</th>
-                  <th style="text-align: right;">Q4 purchase Return</th>
-                  <th style="text-align: right;">Q4 Delivery Rating</th>
-                  <th style="text-align: right;">Q4 Quality Rating</th>
+                  <th class="td_left" *ngFor="let column of tableColumns">
+                    {{ column }}
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter(column)">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen[column]}">
+                        <div class="filter-option" (click)="applyFilter(column, 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen[column]">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput(column)">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
+                  
                 </tr>
               </thead>
               <tbody *ngIf="Tabledata.length !=0">
