--- a/src/app/pages/purchase/top5-suppliers-cr-percent/top5-suppliers-cr-percent.component.html
+++ b/src/app/pages/purchase/top5-suppliers-cr-percent/top5-suppliers-cr-percent.component.html
@@ -111,14 +111,20 @@
                     </div>
                 </th>
                 <tr>
-                  <th class="td_right">Sr. No.</th>
-                  <th class="td_left" style="width: 30%;">Supplier Name</th>
-                  <th class="td_right">Receipt Qty</th>
-                  <th class="td_right">CR Qty</th>
-                  <th class="td_right">Receipt Tonnage</th>
-                  <th class="td_right">CR Tonnage</th>
-                  <th class="td_right">CR % On Tonnage</th>
-                  <th class="td_left">Rejection Details</th>
+                  <th class="td_left" *ngFor="let column of tableColumns">
+                    {{ column }}
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter(column)">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen[column]}">
+                        <div class="filter-option" (click)="applyFilter(column, 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen[column]">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput(column)">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
                 </tr>
               </thead>
               <tbody *ngIf="Tabledata.length !=0">
