--- a/src/app/pages/sales/customer-ci-grade-per-kg-rate-realization/customer-ci-grade-per-kg-rate-realization.component.html
+++ b/src/app/pages/sales/customer-ci-grade-per-kg-rate-realization/customer-ci-grade-per-kg-rate-realization.component.html
@@ -106,15 +106,23 @@
                     </div>
                 </th>
                 <tr>
-                  <th class="td_left" style="width: 20%;">Customer Name</th>
-                  <th class="td_right">Quarter 01</th>
-                  <th class="td_right">Quarter 02</th>
-                  <th class="td_right">Quarter 03</th>
-                  <th class="td_right">Quarter 04</th>
-                  <!-- <th class="td_left">Balance 50% Debit Note/Invoice No.</th>
-                  <th class="td_right">Development Cost Received In INR</th>
-                  <th class="td_right">Balanced D.C. In INR to be Received</th> -->
-                </tr>
+                  <th class="td_left" *ngFor="let column of tableColumns">
+                    {{ column }}
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter(column)">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen[column]}">
+                        <div class="filter-option" (click)="applyFilter(column, 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen[column]">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput(column)">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
+                  
+
+                  </tr>
               </thead>
               <tbody *ngIf="Tabledata.length !=0">
                 <tr *ngFor="let data of Tabledata;let indexOfelement = index">
