--- a/src/app/pages/sales/customer-wise-plan-vs.-actual-sale/customer-wise-plan-vs.-actual-sale.component.html
+++ b/src/app/pages/sales/customer-wise-plan-vs.-actual-sale/customer-wise-plan-vs.-actual-sale.component.html
@@ -91,7 +91,22 @@
                                     <th class="td_right">Difference</th>
                                     <th class="td_right">VA Effect</th>
                                 </tr>
-                            </thead>
+
+                                    <th class="td_left" *ngFor="let column of tableColumns">
+                                      {{ column }}
+                                      <div class="filter-container">
+                                        <div class="filter-toggle" (click)="toggleFilter(column)">
+                                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                                        </div>
+                                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen[column]}">
+                                          <div class="filter-option" (click)="applyFilter(column, 'Option 1')">Filter</div>
+                                          <div class="input-box" [class.show-input]="isFilterInputOpen[column]">
+                                            <input type="text" placeholder=" " (blur)="toggleFilterInput(column)">
+                                          </div>
+                                        </div>
+                                      </div>
+                                    </th>
+                                 </thead>
                             <tbody *ngIf="Tabledata.length !=0">
                                 <tr *ngFor="let data of Tabledata">
                                     <td class="td_left">{{data.AC_NAME}}</td>
