--- a/src/app/pages/sales/development-cost-details/development-cost-details.component.html
+++ b/src/app/pages/sales/development-cost-details/development-cost-details.component.html
@@ -1,3 +1,4 @@
+
 <div class="text-center">
   <i class="fa " [ngClass]="{'d-flex justify-content-center': isLoading1}" style="font-size:46px;"></i>
 
@@ -81,15 +82,8 @@
           <div class="card-block">
             <table class="table table-striped table-bordered table-hover compact marginTable">
               <thead style="position: sticky; top: 0; text-align: center;">
-                <tr>                               
-                </tr>                              
-                <th colspan="8">
-                    <div class="search-container">
-                        <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search...">
-                    </div>
-                </th>
                 <tr>
-                  <th class="td_left">Customer Name</th>
+                  <th class="td_left" style="width: 20%;">Customer Name</th>
                   <th class="td_left">Part Name</th>
                   <th class="td_Right">Development P.O.No/Referance</th>
                   <th class="td_right">Approved Development Cost In INR</th>
