--- a/src/app/pages/sales/enquiry-register/enquiry-register.component.html
+++ b/src/app/pages/sales/enquiry-register/enquiry-register.component.html
@@ -87,15 +87,23 @@
                       </div>
                   </th>
                   <tr>
-                    <th class="td_left">Sr.No.</th>
-                    <th class="td_right">Enquiry Number</th>
-                    <th class="td_right">Date</th>
-                    <th class="td_right">Customer</th>
-                    <th class="td_right">Part Name</th>
-                    <th class="td_right">Material</th>
-                    <th class="td_right">Oty.</th>
-                    <th class="td_right">Remark</th>
-                  </tr>
+                    <th class="td_left" *ngFor="let column of tableColumns">
+                      {{ column }}
+                      <div class="filter-container">
+                        <div class="filter-toggle" (click)="toggleFilter(column)">
+                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                        </div>
+                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen[column]}">
+                          <div class="filter-option" (click)="applyFilter(column, 'Option 1')">Filter</div>
+                          <div class="input-box" [class.show-input]="isFilterInputOpen[column]">
+                            <input type="text" placeholder=" " (blur)="toggleFilterInput(column)">
+                          </div>
+                        </div>
+                      </div>
+                    </th>
+                    
+  
+                    </tr>
                 </thead>
                 <tbody *ngIf="Tabledata.length !=0">
                   <tr *ngFor="let data of Tabledata;let indexOfelement = index">
