--- a/src/app/pages/sales/monthly-value-addition-target-vs-actual/monthly-value-addition-target-vs-actual.component.html
+++ b/src/app/pages/sales/monthly-value-addition-target-vs-actual/monthly-value-addition-target-vs-actual.component.html
@@ -67,8 +67,32 @@
 
 
                 <tr *ngIf="Headers.length !=0">
-                  <th class="td_left">Month</th>
+                  <th class="td_left">Month
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter(column)">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen[column]}">
+                        <div class="filter-option" (click)="applyFilter(column, 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen[column]">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput(column)">
+                        </div>
+                      </div>
+                    </div>
+
+                  </th>
                   <th scope="col" *ngFor="let data of Headers" style="text-align: right;">{{data.VALUE}}
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter(data.VALUE)">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen[data.VALUE]}">
+                        <div class="filter-option" (click)="applyFilter(column, 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen[data.VALUE]">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput(data.VALUE)">
+                        </div>
+                      </div>
+                    </div>
                   </th>
                 </tr>
               </thead>
