--- a/src/app/pages/sales/schedule-adherence-for-the-month/schedule-adherence-for-the-month.component.html
+++ b/src/app/pages/sales/schedule-adherence-for-the-month/schedule-adherence-for-the-month.component.html
@@ -87,12 +87,24 @@
                                     </div>
                                 </th>
                                 <tr>
-                                    <th scope="col" class="td_right">Sr. No.</th>
-                                    <th scope="col" class="td_left">Customer</th>
-                                    <th scope="col" class="td_right">Sch. Qty</th>
-                                    <th scope="col" class="td_right">Disp. Qty</th>
-                                    <th scope="col" class="td_right">Adherence</th>
-                                </tr>
+                                    <th class="td_left" *ngFor="let column of tableColumns">
+                                      {{ column }}
+                                      <div class="filter-container">
+                                        <div class="filter-toggle" (click)="toggleFilter(column)">
+                                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                                        </div>
+                                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen[column]}">
+                                          <div class="filter-option" (click)="applyFilter(column, 'Option 1')">Filter</div>
+                                          <div class="input-box" [class.show-input]="isFilterInputOpen[column]">
+                                            <input type="text" placeholder=" " (blur)="toggleFilterInput(column)">
+                                          </div>
+                                        </div>
+                                      </div>
+                                    </th>
+                                    
+                  
+                                    </tr>
+                  
                             </thead>
                             <tbody *ngIf="Tabledata.length !=0">
                                 <tr *ngFor="let data of Tabledata;let indexOfelement = index">
