--- a/src/app/pages/sales/payment-collection-plan/payment-collection-plan.component.html
+++ b/src/app/pages/sales/payment-collection-plan/payment-collection-plan.component.html
@@ -24,7 +24,7 @@
           </div>
         </div>
         <div class="col-sm-2">
-          <label>Select Finacial Year <sub class="required">* </sub></label>
+          <label>Select Financial Year <sub class="required">* </sub></label>
         </div>
         <div class="col-sm-2">
           <div class="form-group form-primary form-static-label">
@@ -110,18 +110,20 @@
                     </div>
                 </th>
                 <tr>
-                  <th class="td_right">Sr. No.</th>
-                  <th class="td_left">Name of Customer</th>
-                  <th class="td_right">Payment Amount Plan For The Month Rs.</th>
-                  <th class="td_right">Amount Received Rs.</th>
-                  <th class="td_right">% of Recovery</th>
-                  <th class="td_right">Credit Day</th>
-                  <th class="td_right">Avg Payment Receipt Days</th>
-                  <th class="td_right">Avg Payment Receipt Days</th>
-                  <th class="td_right">Avg Payment Receipt Days</th>
-                  <th class="td_right">Avg Payment Receipt Days</th>
-                  <th class="td_right">Avg Payment Receipt Days</th>
-                  <th class="td_right">Avg Payment Receipt Days</th>
+                  <th class="td_left" *ngFor="let column of tableColumns">
+                    {{ column }}
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter(column)">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen[column]}">
+                        <div class="filter-option" (click)="applyFilter(column, 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen[column]">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput(column)">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
                 </tr>
               </thead>
               <tbody *ngIf="Tabledata.length !=0">
