--- a/src/app/pages/subcontract/supplier-wise-boring-recovery-details/supplier-wise-boring-recovery-details.component.html
+++ b/src/app/pages/subcontract/supplier-wise-boring-recovery-details/supplier-wise-boring-recovery-details.component.html
@@ -80,14 +80,20 @@
                     </div>
                 </th>
                 <tr>
-                  <th class="td_right">SN</th>
-                  <th class="td_left">Party Name</th>
-                  <th class="td_right">Balance Boring of {{previousMonthDate | date :'MMM yyyy'}}</th>
-                  <th class="td_right">Boring Genretion as per GRN {{ selectedDate | date:  'dd.MM.YYYY'}}</th>
-                  <th class="td_right">Total collection plan as per GRN {{previousDate | date: 'dd.MM.YYYY'}}</th>
-                  <th class="td_right">Actual Collection {{ selectedDate | date: 'MMM yyyy' }}</th>
-                  <th class="td_right">Balance</th>
-                  <th class="td_left">Supplier PHONE NO</th>
+                  <th class="td_left" *ngFor="let column of tableColumns">
+                    {{ column }}
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter(column)">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen[column]}">
+                        <div class="filter-option" (click)="applyFilter(column, 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen[column]">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput(column)">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
                 </tr>
               </thead>
               <tbody *ngIf="Tabledata.length !=0">
@@ -101,10 +107,7 @@
                   <td class="td_right">{{data?.ACTUAL_RCPT}}</td>
                   <td class="td_right">{{data?.NET_BAL}}</td>
                   <td class="td_right">{{data?.CONTACT_PHONENO }}</td>
-
-
-                </tr>
-
+                 </tr>
             </table>
           </div>
         </div>
