--- a/src/app/pages/sales/customer-wise-plan-vs.-actual-sale/customer-wise-plan-vs.-actual-sale.component.html
+++ b/src/app/pages/sales/customer-wise-plan-vs.-actual-sale/customer-wise-plan-vs.-actual-sale.component.html
@@ -92,7 +92,7 @@
                                     <th class="td_right">VA Effect</th>
                                 </tr>
 
-                                    <th class="td_left" *ngFor="let column of tableColumns">
+                                    <!-- <th class="td_left" *ngFor="let column of tableColumns">
                                       {{ column }}
                                       <div class="filter-container">
                                         <div class="filter-toggle" (click)="toggleFilter(column)">
@@ -105,7 +105,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                    </th>
+                                    </th> -->
                                  </thead>
                             <tbody *ngIf="Tabledata.length !=0">
                                 <tr *ngFor="let data of Tabledata">
