--- a/src/app/pages/sales/daily-sales-data/daily-sales-data.component.html
+++ b/src/app/pages/sales/daily-sales-data/daily-sales-data.component.html
@@ -36,7 +36,7 @@
                         <span class="border-lable-flt">
                             <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" class="form-control"
                                 [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [(ngModel)]="fromdate" [maxDate]="maxDate"
-                                bsDatepicker formControlName="FROM" required style="max-width: 100px;">
+                                bsDatepicker formControlName="FROM" required style="max-width: 100px;" #fdateInput>
                         </span>
                     </div>
                     <div class="form-group form-primary form-static-label"
@@ -116,6 +116,14 @@
                         <div class="card-block">
                             <table class="table table-striped table-bordered table-hover compact marginTable">
                                 <thead style="position: sticky; top: 0; text-align: center;">
+                                    <tr>
+                                    </tr>
+                                    <th colspan="9">
+                                        <div class="search-container">
+                                            <input type="text" [(ngModel)]="searchQuery" (input)="filterData()"
+                                                placeholder="Search...">
+                                        </div>
+                                    </th>
                                     <tr>
                                         <th class="td_left">Customer Name</th>
                                         <th class="td_right"> Target Sales Amount</th>
