--- a/src/app/pages/sales/monthly-sales-and-target/monthly-sales-and-target.component.html
+++ b/src/app/pages/sales/monthly-sales-and-target/monthly-sales-and-target.component.html
@@ -66,7 +66,7 @@
                     </div>
                 </th>
                 <tr *ngIf="Headers.length !=0">
-                  <th class="td_left" style="text-align:r;">Month
+                  <th class="td_left">Month
                     <div class="filter-container">
                       <div class="filter-toggle" (click)="toggleFilter(column)">
                         <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
