--- a/src/app/pages/sales/payment-collection-plan/payment-collection-plan.component.html
+++ b/src/app/pages/sales/payment-collection-plan/payment-collection-plan.component.html
@@ -29,7 +29,7 @@
         <div class="col-sm-2">
           <div class="form-group form-primary form-static-label">
             <span class="border-lable-flt">
-              <ng-select id="YEAR_NAME" bindValue="DATEVALUE" bindLabel="DATEDESC" required #YEAR_NAME  autofocus
+              <ng-select id="YEAR_NAME" bindValue="DATEVALUE" bindLabel="DATEDESC" required #YEAR_NAME autofocus
                 [(ngModel)]="selectedYear" formControlName="YEAR_NAME" (focus)="onFocus(YEAR_NAME)"
                 [selectOnTab]='true'>
                 <ng-option *ngFor="let values of finyear" [value]="values">
@@ -87,6 +87,14 @@
             <table class="table table-striped table-bordered table-hover compact marginTable">
               <thead style="position: sticky; top: 0; text-align: center;">
                 <tr>
+                </tr>
+                <th colspan="17">
+                  <div class="search-container">
+                    <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search...">
+                  </div>
+                </th>
+
+                <tr>
                   <th class="td_right"></th>
                   <th class="td_left"></th>
                   <th class="td_right"></th>
@@ -100,21 +108,21 @@
                   <th class="td_right">{{priviousFour | date :'MMM yyyy'}}</th>
                   <th class="td_right">{{priviousFive | date :'MMM yyyy'}}</th>
                 </tr>
-              </thead>
+              <!-- </thead>
               <thead style="position: sticky; top: 0; text-align: center;">
-                <tr>                               
-                </tr>                              
-                <th colspan="6">
-                    <div class="search-container">
-                        <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search...">
-                    </div>
-                </th>
+                <tr>
+                </tr> -->
+                <!-- <th colspan="6">
+                  <div class="search-container">
+                    <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search...">
+                  </div>
+                </th> -->
                 <tr>
                   <th class="td_left" *ngFor="let column of tableColumns">
                     {{ column }}
                     <div class="filter-container">
                       <div class="filter-toggle" (click)="toggleFilter(column)">
-                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
                       </div>
                       <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen[column]}">
                         <div class="filter-option" (click)="applyFilter(column, 'Option 1')">Filter</div>
@@ -150,12 +158,12 @@
 
               <div class="row" id="r1" style="margin-top: 20px;margin-bottom: 20px;" *ngIf="showtable"></div>
               <div class="col-12"></div>
-               <div class="table-responsive"></div>
-                 <div class="table-fixed"></div>
-                   <div class="card"></div>
-                     <div class="card-block"></div> 
-                 <tfoot style="position: sticky; bottom: 0; text-align: center;">
-                 <tr *ngFor="let data of FooterData;let indexOfelement = index">
+              <div class="table-responsive"></div>
+              <div class="table-fixed"></div>
+              <div class="card"></div>
+              <div class="card-block"></div>
+              <tfoot style="position: sticky; bottom: 0; text-align: center;">
+                <tr *ngFor="let data of FooterData;let indexOfelement = index">
                   <td class="td_right"> </td>
                   <td class="td_left" style="font-weight: bold;">{{data.SUBGL_LONGNAME}} </td>
                   <td class="td_right"> {{data.INVOICE_AMT != null ? data.INVOICE_AMT : ''}}</td>
