--- a/src/app/pages/subcontract/supplier-wise-boring-recovery-details/supplier-wise-boring-recovery-details.component.html
+++ b/src/app/pages/subcontract/supplier-wise-boring-recovery-details/supplier-wise-boring-recovery-details.component.html
@@ -32,16 +32,10 @@
         <div class="col-sm-2">
           <div class="form-group input-group">
             <span class="border-lable-flt">
-<<<<<<< Updated upstream
               <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" class="form-control"
                 (focus)="onFocus(FROM)" [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [(ngModel)]="selectedDate"
                 (ngModelChange)="updatePreviousDate()" (ngModelChange)="upmonth()" [maxDate]="maxDate" bsDatepicker
-                formControlName="FROM" required style="max-width: 100px;">
-=======
-              <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" class="form-control" 
-                (focus)="onFocus(FROM)" [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [(ngModel)]="fromdate"
-                [maxDate]="maxDate" bsDatepicker formControlName="FROM" required style="max-width: 100px;"   #fdateInput>
->>>>>>> Stashed changes
+                formControlName="FROM" required style="max-width: 100px;" #fdateInput>
             </span>
           </div>
           <div class="form-group form-primary form-static-label"
