--- a/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.html
+++ b/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.html
@@ -76,14 +76,15 @@
                         <table class="table table-striped table-bordered table-hover compact margintable">
 
                             <thead style="position: sticky; top: 0; text-align: center;">
-                                <tr>                               
+                                <tr >                               
                                 </tr>                              
-                                <th colspan="6">
+                                <th colspan="6" >
                                     <div class="search-container">
                                         <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search...">
                                     </div>
                                 </th>
                                 <tr *ngIf="Headers.length !=0">
+                                    <th class="td_left">Month</th>
                                     <th *ngFor="let data of Headers" style="text-align: right;">
                                         {{data.MAT_NAME}}
                                     </th>
